--- a/.github/workflows/create.yaml
+++ b/.github/workflows/create.yaml
@@ -1,30 +1,69 @@
-name: create runner # workflow name
-on: workflow_dispatch
-jobs: 
+# name: create runner # workflow name
+# on: workflow_dispatch
+# jobs: 
+#   create-runner:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: checkout code
+#         uses: actions/checkout@v4
+
+#       - name: list files
+#         run: ls -l
+#       # installs latest terraform in the runner
+#       - name: setup terraform
+#         uses: hashicorp/setup-terraform@v3
+
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v5.1.1
+#         with:
+#           aws-region: us-east-1
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+#       - name: terraform init
+#         run: terraform init
+
+#       - name: terraform plan
+#         run: terraform plan
+
+#       - name: terraform approve
+#         run: terraform apply -auto-approve
+
+name: create runner
+
+on:
+  workflow_dispatch: {}
+
+jobs:
   create-runner:
     runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v6
 
-      - name: list files
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: List files
         run: ls -l
-      # installs latest terraform in the runner
-      - name: setup terraform
+
+      # Install Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v5.1.1
+        uses: aws-actions/configure-aws-credentials@v5
         with:
-          aws-region: us-east-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-      - name: terraform init
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
+      - name: Terraform init
         run: terraform init
 
-      - name: terraform plan
+      - name: Terraform plan
         run: terraform plan
 
-      - name: terraform approve
+      - name: Terraform apply
         run: terraform apply -auto-approve
