--- a/.github/workflows/create.yaml
+++ b/.github/workflows/create.yaml
@@ -1,38 +1,7 @@
-# name: create runner # workflow name
-# on: workflow_dispatch
-# jobs: 
-#   create-runner:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: checkout code
-#         uses: actions/checkout@v4
-
-#       - name: list files
-#         run: ls -l
-#       # installs latest terraform in the runner
-#       - name: setup terraform
-#         uses: hashicorp/setup-terraform@v3
-
-#       - name: Configure AWS Credentials
-#         uses: aws-actions/configure-aws-credentials@v5.1.1
-#         with:
-#           aws-region: us-east-1
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-#       - name: terraform init
-#         run: terraform init
-
-#       - name: terraform plan
-#         run: terraform plan
-
-#       - name: terraform approve
-#         run: terraform apply -auto-approve
-
 name: create runner
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 jobs:
   create-runner:
@@ -42,12 +11,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: List files
-        run: ls -l
-
-      # Install Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
@@ -56,14 +23,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Verify AWS identity
+      - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
-      - name: Terraform init
+      - name: Terraform Init
         run: terraform init
 
-      - name: Terraform plan
+      - name: Terraform Plan
         run: terraform plan
 
-      - name: Terraform apply
+      - name: Terraform Apply
         run: terraform apply -auto-approve
